--- a/Portfolio/Details/index.html
+++ b/Portfolio/Details/index.html
@@ -6,7 +6,6 @@
     <title>Projets</title>
     <link rel="stylesheet" href="../CSS/StyleAccueil.css">
     <link rel="stylesheet" href="../CSS/StyleDetails.css">
-    <link rel="stylesheet" href="../CSS/Carrousel.css">
     <link rel="icon" href="../Images/Logo/Dev.png" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -51,22 +50,23 @@
                 </div>
                 <div class="projet-title">
                     <h2>Montage d'un Ordinateur fixe</h2>
-                    <h3>Montage et Instalation</h3>
+                    <h3>Montage et Installation</h3>
                 </div>
             </div>
             <div class="projet-body">
-                <p class="description">Assemblage et Instalation d'un ordinateur pour un usage personel et professionnel.</p>
+                <p class="description">Assemblage et installation d'un ordinateur pour un usage personnel et professionnel.</p>
                 <h4>Actions effectuées :</h4>
                 <ul class="technologies">
                     <li>Assemblage des composants</li>
-                    <li>Instalation d'un Windows 10</li>
-                    <li>Instalation de drivers</li>
+                    <li>Installation de Windows 10</li>
+                    <li>Installation de drivers</li>
+                    <li>Optimisation du BIOS/UEFI</li>
                 </ul>
-                <h4>compétences :</h4>
+                <h4>Compétences :</h4>
                 <ul class="technologies">
-                    <li>...1</li>
-                    <li>...2</li>
-                    <li>...3</li>
+                    <li>1.1 Recenser et identifier les ressources numériques</li>
+                    <li>1.5 Gérer des sauvegardes</li>
+                    <li>5.2 Déployer un service</li>
                 </ul>
             </div>
         </div>
@@ -90,14 +90,22 @@
                     <li>.Net MAUI</li>
                     <li>Visual Studio</li>
                     <li>SQL Server</li>
-                    <li>API <i>(Déja existante)</i></li>
+                    <li>API REST</li>
                     <li>GitHub</li>
+                </ul>
+                <h4>Actions effectuées :</h4>
+                <ul class="technologies">
+                    <li>Conception de l’interface utilisateur</li>
+                    <li>Adaptation de la logique métier à un environnement mobile</li>
+                    <li>Test et intégration avec l’API existante</li>
                 </ul>
                 <h4>compétences :</h4>
                 <ul class="technologies">
-                    <li>...1</li>
-                    <li>...2</li>
-                    <li>...3</li>
+                    <li>3.1 Participer à la valorisation de l’image de l’organisation</li>
+                    <li>3.3 Participer à l’évolution d’un site Web ou d’une application</li>
+                    <li>4.1 Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                    <li>4.2 Planifier les activités</li>
+                    <li>5.1 Réaliser les tests d’intégration et d’acceptation d’un service</li>
                 </ul>
                 <p class="description"><i>Application développée en équipe pour l'entreprise IDConseils pendant mon apprentissage de BTS SIO.</i></p>
                 <a href="../Document/CompteRenduGustavMobile.pdf" target="_blank" class="button">Voir le compte rendu</a>
@@ -121,11 +129,18 @@
                     <li>Figma</li>
                     <li>Canva</li>
                 </ul>
+                <h4>Actions effectuées :</h4>
+                <ul class="technologies">
+                    <li>Analyse des besoins</li>
+                    <li>Conception d'un prototype</li>
+                    <li>Tests et ajustements selon les retours utilisateurs</li>
+                </ul>
                 <h4>compétences :</h4>
                 <ul class="technologies">
-                    <li>...1</li>
-                    <li>...2</li>
-                    <li>...3</li>
+                    <li>3.1 Participer à la valorisation de l’image de l’organisation</li>
+                    <li>3.3 Participer à l’évolution d’une application</li>
+                    <li>4.1 Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                    <li>4.2 Planifier les activités</li>
                 </ul>
                 <p class="description"><i>Design créé pour l'entreprise IDConseils pendant mon apprentissage de BTS SIO.</i></p>
             </div>
@@ -148,14 +163,20 @@
                     <li>.Net MAUI</li>
                     <li>Visual Studio</li>
                     <li>SQL Server</li>
-                    <li>API <i>(Déja existante)</i></li>
-                    <li>GitHub</li>
+                    <li>API REST</li>
+                </ul>
+                <h4>Actions effectuées :</h4>
+                <ul class="technologies">
+                    <li>Développement de l’interface utilisateur</li>
+                    <li>Intégration des fonctionnalités de gestion d’appels</li>
                 </ul>
                 <h4>compétences :</h4>
                 <ul class="technologies">
-                    <li>...1</li>
-                    <li>...2</li>
-                    <li>...3</li>
+                    <li>2.1 Concevoir et développer une application</li>
+                    <li>2.2 Mettre à disposition des utilisateurs un service informatique</li>
+                    <li>3.3 Participer à l’évolution d’une application</li>
+                    <li>4.1 Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                    <li>5.1 Réaliser les tests d’intégration et d’acceptation d’un service</li>
                 </ul>
                 <p class="description"><i>Application développée pour l'entreprise IDConseils pendant mon apprentissage de BTS SIO.</i></p>
                 <a href="../Document/CompteRenduGustavDesktop.pdf" target="_blank" class="button">Voir le compte rendu</a>
@@ -175,16 +196,24 @@
                 <p class="description">Création de mon Portfolio</p>
                 <h4>Technologies utilisées :</h4>
                 <ul class="technologies">
-                    <li>Visual Studio Code</li>
-                    <li>Html</li>
-                    <li>Css</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
                     <li>JavaScript</li>
+                    <li>Visual Studio Code</li>
+                </ul>
+                <h4>Actions effectuées :</h4>
+                <ul class="technologies">
+                    <li>Conception et développement du site</li>
+                    <li>Optimisation du design responsive</li>
+                    <li>Mise en ligne et maintenance</li>
                 </ul>
                 <h4>compétences :</h4>
                 <ul class="technologies">
-                    <li>...1</li>
-                    <li>...2</li>
-                    <li>...3</li>
+                    <li>2.1 Concevoir et développer une application Web</li>
+                    <li>3.1 Participer à la valorisation de l’image de l’organisation</li>
+                    <li>3.3 Participer à l’évolution d’un site Web</li>
+                    <li>4.1 Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                    <li>5.2 Déployer un service</li>
                 </ul>
                 <p class="description"><i>osouf-livio.fr</i></p>
                 <a href="https://www.osouf-livio.fr/" target="_blank" class="button">Voir le site</a>
@@ -204,16 +233,24 @@
                 <p class="description">Développement d'un site web pour une association.</p>
                 <h4>Technologies utilisées :</h4>
                 <ul class="technologies">
-                    <li>Visual Studio Code</li>
-                    <li>Html</li>
-                    <li>Css</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
                     <li>JavaScript</li>
+                    <li>Visual Studio Code</li>
+                </ul>
+                <h4>Actions effectuées :</h4>
+                <ul class="technologies">
+                    <li>Conception et développement du site</li>
+                    <li>Optimisation du design responsive</li>
+                    <li>Mise en ligne et maintenance</li>
                 </ul>
                 <h4>compétences :</h4>
                 <ul class="technologies">
-                    <li>...1</li>
-                    <li>...2</li>
-                    <li>...3</li>
+                    <li>2.1 Concevoir et développer une application Web</li>
+                    <li>3.1 Participer à la valorisation de l’image de l’organisation</li>
+                    <li>3.3 Participer à l’évolution d’un site Web</li>
+                    <li>4.1 Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                    <li>5.2 Déployer un service</li>
                 </ul>
                 <p class="description"><i>association-apres.fr</i></p>
                 <a href="https://association-apres.fr/" target="_blank" class="button">Voir le site</a>
@@ -234,38 +271,48 @@
                 <h4>Technologies utilisées :</h4>
                 <ul class="technologies">
                     <li>PHP</li>
-                    <li>HTML</li>
-                    <li>Css</li>
+                    <li>HTML / CSS</li>
                     <li>JavaScript</li>
                     <li>MySQL</li>
                 </ul>
+                <h4>Actions effectuées :</h4>
+                <ul class="technologies">
+                    <li>Développement du front-end et du back-end</li>
+                    <li>Gestion des produits, utilisateurs et commandes</li>
+                    <li>Intégration d’un panier d’achat dynamique</li>
+                </ul>
                 <h4>compétences :</h4>
                 <ul class="technologies">
-                    <li>...1</li>
-                    <li>...2</li>
-                    <li>...3</li>
+                    <li>2.1 Concevoir et développer une application Web</li>
+                    <li>2.3 Traiter des demandes concernant les applications</li>
+                    <li>3.3 Participer à l’évolution d’un site Web</li>
+                    <li>4.1 Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                    <li>5.1 Réaliser les tests d’intégration et d’acceptation d’un service</li>
+                    <li>5.2 Déployer un service</li>
                 </ul>
                 <p class="description"><i>Site développé pour mon examen pratique du BTS.</i></p>
                 <a href="../Document/OSOUF_Livio_CompteRendu_SiteMarchand.pdf" target="_blank" class="button">Voir le compte rendu</a>
                 <a href="https://osouf-livio.fr/Shop/Accueil/" target="_blank" class="button">Voir le site</a>
             </div>
-            <div class="container_carrousel">
-                <input type="radio" name="slider" id="item-1" checked>
-                <input type="radio" name="slider" id="item-2">
-                <input type="radio" name="slider" id="item-3">
-              <div class="cards">
-                <label class="card" for="item-1" id="song-1">
-                  <img src="../Images/Commandes-site.png" alt="song">
-                </label>
-                <label class="card" for="item-2" id="song-2">
-                  <img src="../Images/Panier-site.png" alt="song">
-                </label>
-                <label class="card" for="item-3" id="song-3">
-                  <img src="../Images/Produit-Site.png" alt="song">
-                </label>
-              </div>
-            </div> 
-            <img class="img-bonus" src="../Images/BDD-projet.png">
+            
+            <div class="annexes">
+                <div class="annexes-item">
+                    <img src="../Images/Commandes-site.png" alt="Écran de suivis des commandes" onclick="openPopup(this.src)">
+                    <p>Écran de suivis des commandes</p>
+                </div>
+                <div class="annexes-item">
+                    <img src="../Images/Produit-Site.png" alt="Écran de recherche des produits" onclick="openPopup(this.src)">
+                    <p>Écran de recherche des produits</p>
+                </div>
+                <div class="annexes-item">
+                    <img src="../Images/Panier-site.png" alt="Écran de suivis du panier" onclick="openPopup(this.src)">
+                    <p>Écran de suivis du panier</p>
+                </div>
+                <div class="annexes-item">
+                    <img src="../Images/BDD-projet.png" alt="Base de données du site" onclick="openPopup(this.src)">
+                    <p>Base de données du site</p>
+                </div>
+            </div>
         </div>    
         <div class="projet" id="projet8">
             <div class="projet-header">
@@ -281,43 +328,68 @@
                 <p class="description">Développement de la partie administrateur du site web marchand.</p>
                 <h4>Technologies utilisées :</h4>
                 <ul class="technologies">
-                    <li>WPF</li>
-                    <li>MVVM</li>
-                    <li>EntityFramework</li>
                     <li>C#</li>
-                    <li>Xaml</li>
+                    <li>WPF / XAML</li>
+                    <li>Entity Framework</li>
                     <li>MySQL</li>
+                    <li>MVVM</li>
+                </ul>
+                <h4>Actions effectuées :</h4>
+                <ul class="technologies">
+                    <li>Développement de l’interface utilisateur</li>
+                    <li>Gestion des produits, utilisateurs et commandes</li>
+                    <li>Connexion et interaction avec la base de données</li>
                 </ul>
                 <h4>compétences :</h4>
                 <ul class="technologies">
-                    <li>...1</li>
-                    <li>...2</li>
-                    <li>...3</li>
+                    <li>2.1 Concevoir et développer une application en C#</li>
+                    <li>2.3 Traiter des demandes concernant les applications</li>
+                    <li>3.3 Participer à l’évolution d’une application</li>
+                    <li>4.1 Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                    <li>5.1 Réaliser les tests d’intégration et d’acceptation d’un service</li>
+                    <li>5.2 Déployer un service</li>
                 </ul>
                 <p class="description"><i>Application développée pour mon examen pratique du BTS.</i></p>
                 <a href="../Document/CompteRenduGustavMobile.pdf" target="_blank" class="button">Voir le compte rendu</a>
             </div>
-            <div class="container_carrousel">
-                <input type="radio" name="slider" id="item-1" checked>
-                <input type="radio" name="slider" id="item-2">
-                <input type="radio" name="slider" id="item-3">
-              <div class="cards">
-                <label class="card" for="item-1" id="song-1">
-                  <img src="../Images/Commandes-App.png" alt="Image1">
-                </label>
-                <label class="card" for="item-2" id="song-2">
-                  <img src="../Images/Produit-App.png" alt="Image2">
-                </label>
-                <label class="card" for="item-3" id="song-3">
-                  <img src="../Images/User-App.png" alt="Image3">
-                </label>
-              </div>
-            </div> 
-            <img class="img-bonus" src="../Images/BDD-projet.png">
+
+            <div class="annexes">
+                <div class="annexes-item">
+                    <img src="../Images/Commandes-App.png" alt="Écran de gestion des commandes" onclick="openPopup(this.src)">
+                    <p>Écran de gestion des commandes</p>
+                </div>
+                <div class="annexes-item">
+                    <img src="../Images/Produit-App.png" alt="Écran de gestion des produits" onclick="openPopup(this.src)">
+                    <p>Écran de gestion des produits</p>
+                </div>
+                <div class="annexes-item">
+                    <img src="../Images/User-App.png" alt="Écran de gestion des utilisateurs" onclick="openPopup(this.src)">
+                    <p>Écran de gestion des utilisateurs</p>
+                </div>
+                <div class="annexes-item">
+                    <img src="../Images/BDD-projet.png" alt="Base de données de l'application" onclick="openPopup(this.src)">
+                    <p>Base de données de l'application</p>
+                </div>
+            </div>
         </div>  
     </div>
 
-    
+    <div id="popup" class="popup" onclick="closePopup()">
+        <span class="popup-close">&times;</span>
+        <img id="popup-img" class="popup-content">
+    </div>
+
+    <script>
+        function openPopup(src) {
+            document.getElementById("popup-img").src = src;
+            document.getElementById("popup").style.display = "flex";
+        }
+
+        function closePopup() {
+            document.getElementById("popup").style.display = "none";
+        }
+    </script>
+
     <script src="../js/ScriptDetailsProjets.js"></script>
 
     <script src="../js/ToogleProjectDetailsScript.js"></script>
