Détails Cours en ligne

--- a/Portfolio/Details/index.html
+++ b/Portfolio/Details/index.html
@@ -26,13 +26,13 @@
         <div class="column2 nav-column">
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#Accueil">Accueil</a></li>
-                    <li><a href="#Profil">Profil</a></li>
-                    <li><a href="#Projet" class="active">Projets</a></li>
-                    <li><a href="#BTSSIO">BTS SIO</a></li>
-                    <li><a href="#SituationProfessionnelle">Expériences Professionnelles</a></li>
-                    <li><a href="#Veilletechnologique">Veille technologique</a></li>
-                    <li><a href="#Contact">Contact</a></li>
+                    <li><a href="../#Accueil">Accueil</a></li>
+                    <li><a href="../#Profil">Profil</a></li>
+                    <li><a href="../#Projet" class="active">Projets</a></li>
+                    <li><a href="../#BTSSIO">BTS SIO</a></li>
+                    <li><a href="../#SituationProfessionnelle">Expériences Professionnelles</a></li>
+                    <li><a href="../#Veilletechnologique">Veille technologique</a></li>
+                    <li><a href="../#Contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="burger-menu" onclick="toggleMenu()">
