--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -349,8 +349,10 @@
                 <div class="column left-column">
                     <h2>Formation Complémentaire</h2>
                     <h3>Créez votre site web avec HTML5 et CSS3</h3>
-                    <p>La formation "Créez votre site web avec HTML5 et CSS3" m'a permis d'acquérir les bases nécessaires à la conception de mon portfolio ainsi que d'autres projets web. Grâce à ce cours, j'ai appris à structurer des pages avec HTML5 et à les personnaliser avec CSS3, tout en explorant des techniques de mise en page modernes. Cette expérience m'a donné les outils pour créer des sites web à la fois fonctionnels et esthétiques.</p>
-                    <a href="https://openclassrooms.com/fr/courses/1603881-creez-votre-site-web-avec-html5-et-css3" target="_blank" class="button">Voir la formation</a>
+                    <p>La formation <a href="https://openclassrooms.com/fr/courses/1603881-creez-votre-site-web-avec-html5-et-css3" target="_blank"><i>"Créez votre site web avec HTML5 et CSS3"</i></a> m'a permis d'acquérir les bases nécessaires à la conception de mon portfolio ainsi que d'autres projets web. Grâce à ce cours, j'ai appris à structurer des pages avec HTML5 et à les personnaliser avec CSS3, tout en explorant des techniques de mise en page modernes. Cette expérience m'a donné les outils pour créer des sites web à la fois fonctionnels et esthétiques.</p>
+
+                    <h3>Apprenez à programmer en C++</h3>
+                    <p>La formation <a href="https://openclassrooms.com/fr/courses/1894236-apprenez-a-programmer-en-c" target="_blank"><i>"Apprenez à programmer en C++"</i></a> m’a permis d’acquérir les bases essentielles de ce langage, largement utilisé dans les écoles d’ingénieur que je vise. Grâce à ce cours, j’ai pu comprendre les fondamentaux de la programmation en C++ : la syntaxe, les structures de contrôle, les fonctions, ainsi que la manipulation de variables et de types. Cette première approche m’a donné les outils nécessaires pour aborder des projets plus techniques et mieux préparer la suite de mon parcours en informatique.</p>
                 </div>
                 <div class="column right-column">
                     <img src="Images/Logo/OpenClassrooms.webp" alt="Logo" class="logoOP" style="height: 70%;width: 70%;">
