Mise a jour envoie de mail

--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -534,7 +534,7 @@
 
 
         <section id="Contact" class="section">
-            <form action="PHP/SendMail.php" method="post" onsubmit="return validateForm();">
+            <form action="PHP/SendMail.php" method="post">
                 <h2>Contactez-Moi</h2>
                 <div class="input-row">
                     <input type="text" name="lastname" placeholder="Nom" required>
@@ -548,8 +548,6 @@
         </section>
         
     </div>   
-
-    <script src="js/validateScript.js"></script>
 
     <script src="js/ToogleProjectDetailsScript.js"></script>
     <script src="js/LoaderScript.js"></script>
